New function for presel score calculation

--- a/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -287,14 +287,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "id": "8285b468",
    "metadata": {},
    "outputs": [],
    "source": [
     "signal_processes = [\"htautau\"]\n",
     "background_processes = [\"ttbar\", \"ztautau\"]\n",
-    "# background_processes = [\"ttbar\", \"ztautau\", \"diboson\"]"
+    "# background_processes = [\"ttbar\", \"ztautau\", \"diboson\"]\n",
+    "\n",
+    "pre_factor = {}\n",
+    "\n",
+    "pre_factor['htautau'] = 1.0\n",
+    "pre_factor['ttbar'] = 1.0\n",
+    "pre_factor['ztautau'] = 1.0\n",
+    "\n",
+    "np.save(f\"{saved_data}signal_processes.npy\", signal_processes)\n",
+    "np.save(f\"{saved_data}background_processes.npy\", background_processes)\n",
+    "np.save(f\"{saved_data}pre_factor_preselection.npy\", pre_factor)"
    ]
   },
   {
@@ -461,7 +471,7 @@
     "    # Get predictions (softmax outputs)\n",
     "    pred_NN_incl = preselectionTraining.predict(dataset_incl_nominal)\n",
     "\n",
-    "    for \n",
+    "    presel_score = calculate_preselection_observable(pred_NN_incl, labels_dict, signal_processes, background_processes, pre_factor_dict = pre_factor)\n",
     "\n",
     "    "
    ]
@@ -480,11 +490,7 @@
     "np.save(f\"{saved_data}mix_model_hypotheses.npy\", mix_model_hypotheses)\n",
     "np.save(f\"{saved_data}ref_processes.npy\", ref_processes)\n",
     "\n",
-    "pre_factor = {}\n",
     "\n",
-    "pre_factor['htautau'] = 1.0\n",
-    "pre_factor['ttbar'] = 1.0\n",
-    "pre_factor['ztautau'] = 1.0\n",
     "\n",
     "if not USE_SAVED_PRESEL_PREDICTIONS:\n",
     "\n",
