--- a/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "0a769dae-97a2-44f9-bc81-e4c74ff7bedb",
    "metadata": {},
    "outputs": [],
@@ -52,6 +52,8 @@
     "import nsbi_common_utils\n",
     "from nsbi_common_utils import plotting, training\n",
     "from nsbi_common_utils.training import TrainEvaluate_NN, TrainEvaluatePreselNN\n",
+    "from nsbi_common_utils.training import calculate_preselection_observable\n",
+    "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6aa6af2f-0686-4fbf-bca8-fce9a8bb1496",
    "metadata": {},
    "outputs": [],
@@ -114,24 +116,66 @@
    "outputs": [],
    "source": [
     "# Get the dictionary of labels to processes\n",
-    "labels_dict = np.load(f\"{saved_data}labels_dictionary.npy\", allow_pickle=True).item()"
+    "labels_dict = np.load(f\"{saved_data}labels_dictionary.npy\", allow_pickle=True).item()\n",
+    "\n",
+    "signal_processes = np.load(f\"{saved_data}signal_processes.npy\")\n",
+    "background_processes = np.load(f\"{saved_data}background_processes.npy\")\n",
+    "pre_factor = np.load(f\"{saved_data}pre_factor_preselection.npy\", allow_pickle=True).item()\n",
+    "\n",
+    "columns = np.load(f\"{saved_data}columns.npy\")\n",
+    "columns_scaling = np.load(f\"{saved_data}columns_scaling.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "2d6082ae",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1749055501.059028  223580 gpu_device.cc:2022] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1213 MB memory:  -> device: 0, name: NVIDIA A100-SXM4-40GB MIG 1g.5gb, pci bus id: 0000:81:00.0, compute capability: 8.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m     1/238461\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m16:10:54\u001b[0m 244ms/step"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1749055502.072685  224186 service.cc:148] XLA service 0x7fc61c005080 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "I0000 00:00:1749055502.072790  224186 service.cc:156]   StreamExecutor device (0): NVIDIA A100-SXM4-40GB MIG 1g.5gb, Compute Capability 8.0\n",
+      "2025-06-04 16:45:02.078544: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "I0000 00:00:1749055502.095025  224186 cuda_dnn.cc:529] Loaded cuDNN version 90501\n",
+      "I0000 00:00:1749055502.176850  224186 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m238461/238461\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m144s\u001b[0m 602us/step\n"
+     ]
+    },
+    {
      "ename": "NameError",
-     "evalue": "name 'labels_dict' is not defined",
+     "evalue": "name 'pre_factor' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m importlib\u001b[38;5;241m.\u001b[39mreload(sys\u001b[38;5;241m.\u001b[39mmodules[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnsbi_common_utils.training\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnsbi_common_utils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtraining\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TrainEvaluatePreselNN\n\u001b[0;32m----> 4\u001b[0m num_classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[43mlabels_dict\u001b[49m)\n\u001b[1;32m      6\u001b[0m preselectionTraining \u001b[38;5;241m=\u001b[39m TrainEvaluatePreselNN(dataset_incl_nominal, num_classes, columns, columns_scaling)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'labels_dict' is not defined"
+      "Cell \u001b[0;32mIn[7], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m preselectionTraining\u001b[38;5;241m.\u001b[39mget_trained_model(path_to_saved_presel_model)\n\u001b[1;32m     16\u001b[0m pred_NN_incl \u001b[38;5;241m=\u001b[39m preselectionTraining\u001b[38;5;241m.\u001b[39mpredict(dataset)\n\u001b[0;32m---> 18\u001b[0m \u001b[43mcalculate_preselection_observable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpred_NN_incl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignal_processes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbackground_processes\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/training.py:531\u001b[0m, in \u001b[0;36mcalculate_preselection_observable\u001b[0;34m(pred_NN_incl, labels_dict, signal_processes, background_processes, pre_factor_dict)\u001b[0m\n\u001b[1;32m    528\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mcalculate_preselection_observable\u001b[39m(pred_NN_incl, labels_dict, signal_processes, background_processes, pre_factor_dict \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtautau\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mttbar\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mztautau\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1.0\u001b[39m}):\n\u001b[1;32m    530\u001b[0m     signal_sum \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(\n\u001b[0;32m--> 531\u001b[0m         \u001b[43m[\u001b[49m\u001b[43mpre_factor\u001b[49m\u001b[43m[\u001b[49m\u001b[43msignal\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mpred_NN_incl\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43msignal\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43msignal\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43msignal_processes\u001b[49m\u001b[43m]\u001b[49m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    532\u001b[0m     )\n\u001b[1;32m    534\u001b[0m     background_sum \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(\n\u001b[1;32m    535\u001b[0m         [pre_factor[background] \u001b[38;5;241m*\u001b[39m pred_NN_incl[:, labels_dict[background]] \u001b[38;5;28;01mfor\u001b[39;00m background \u001b[38;5;129;01min\u001b[39;00m background_processes], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    536\u001b[0m     )\n\u001b[1;32m    537\u001b[0m     \u001b[38;5;66;03m# the preselection score as defined above - log(P_S/P_B)\u001b[39;00m\n",
+      "File \u001b[0;32m/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/training.py:531\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    528\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mcalculate_preselection_observable\u001b[39m(pred_NN_incl, labels_dict, signal_processes, background_processes, pre_factor_dict \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtautau\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mttbar\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mztautau\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1.0\u001b[39m}):\n\u001b[1;32m    530\u001b[0m     signal_sum \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(\n\u001b[0;32m--> 531\u001b[0m         [\u001b[43mpre_factor\u001b[49m[signal] \u001b[38;5;241m*\u001b[39m pred_NN_incl[:, labels_dict[signal]] \u001b[38;5;28;01mfor\u001b[39;00m signal \u001b[38;5;129;01min\u001b[39;00m signal_processes], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    532\u001b[0m     )\n\u001b[1;32m    534\u001b[0m     background_sum \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(\n\u001b[1;32m    535\u001b[0m         [pre_factor[background] \u001b[38;5;241m*\u001b[39m pred_NN_incl[:, labels_dict[background]] \u001b[38;5;28;01mfor\u001b[39;00m background \u001b[38;5;129;01min\u001b[39;00m background_processes], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    536\u001b[0m     )\n\u001b[1;32m    537\u001b[0m     \u001b[38;5;66;03m# the preselection score as defined above - log(P_S/P_B)\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pre_factor' is not defined"
      ]
     }
    ],
@@ -147,11 +191,21 @@
     "\n",
     "    for direction in datasets_syst[syst]:\n",
     "\n",
+    "        if 'presel_score' in list(datasets_syst[syst][direction].columns()): continue\n",
+    "\n",
     "        dataset = datasets_syst[syst][direction]\n",
     "    \n",
     "        preselectionTraining = TrainEvaluatePreselNN(dataset, num_classes, columns, columns_scaling)\n",
     "        preselectionTraining.get_trained_model(path_to_saved_presel_model)\n",
-    "        pred_NN_incl = preselectionTraining.predict(dataset)"
+    "        pred_NN_incl = preselectionTraining.predict(dataset)\n",
+    "\n",
+    "        presel_score = calculate_preselection_observable(pred_NN_incl, labels_dict, signal_processes, background_processes)\n",
+    "\n",
+    "        datasets_syst[syst][direction]['presel_score'] = presel_score\n",
+    "\n",
+    "        datasets_syst[syst][direction].to_hdf(f\"{saved_data}df_{syst}_{direction}.h5\", key=\"dataset\", mode=\"w\")\n",
+    "\n",
+    "        del dataset, presel_score, pred_NN_incl"
    ]
   },
   {
@@ -161,8 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = np.load(f\"{saved_data}columns.npy\")\n",
-    "columns_scaling = np.load(f\"{saved_data}columns_scaling.npy\")\n",
+    "\n",
     "\n",
     "dataset_incl = pd.read_hdf(f\"{saved_data}dataset_inclusive.h5\", key=\"dataset\", mode='r')\n",
     "presel_score_incl = np.load(f\"{saved_data}presel_score_incl.npy\")\n",
