Updates to systematic uncertainty notebook, new method on preselection

--- a/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
@@ -41,18 +41,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "0a769dae-97a2-44f9-bc81-e4c74ff7bedb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:10: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
+      "  hep.set_style(\"ATLAS\")\n",
+      "2025-06-04 18:27:31.435977: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1749061651.449990     903 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1749061651.454112     903 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-06-04 18:27:31.469386: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, sys, importlib\n",
-    "sys.path.append('/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/')\n",
+    "# sys.path.append('/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/')\n",
     "\n",
     "import nsbi_common_utils\n",
     "from nsbi_common_utils import plotting, training\n",
     "from nsbi_common_utils.training import TrainEvaluate_NN, TrainEvaluatePreselNN\n",
-    "from utils import calculate_preselection_observable\n",
+    "\n",
+    "from utils import calculate_preselection_observable, preselection_using_score\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
@@ -79,18 +95,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "6aa6af2f-0686-4fbf-bca8-fce9a8bb1496",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['TES']\n"
+     ]
+    }
+   ],
    "source": [
     "# Save/load the datasets from pre-processed input\n",
     "path_prefix = '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/'\n",
     "saved_data = f'{path_prefix}cached_data/'\n",
     "\n",
     "# Systematics and which samples are affected by which systematics\n",
-    "dict_systs = {'TES': {'process':['hatautau', 'ttbar', 'ztautau'], 'directions':['up','dn']},\n",
-    "              'JES': {'process':['hatautau', 'ttbar', 'ztautau'], 'directions':['up','dn']}}\n",
+    "dict_systs = {'TES': {'process':['htautau', 'ttbar', 'ztautau'], 'directions':['up','dn']},\n",
+    "              'JES': {'process':['htautau', 'ttbar', 'ztautau'], 'directions':['up','dn']}}\n",
+    "\n",
+    "# Systematics and which samples are affected by which systematics\n",
+    "dict_systs = {'TES': {'process':['htautau', 'ttbar', 'ztautau'], 'directions':['up','dn']}}\n",
     "\n",
     "datasets_syst = {}\n",
     "\n",
@@ -105,12 +132,16 @@
     "\n",
     "dataset_nom = pd.read_hdf(f\"{saved_data}df_nominal.h5\", key=\"dataset\")\n",
     "\n",
-    "list_syst = [key for key in dict_systs]"
+    "presel_score_nom = np.load(f\"{saved_data}presel_score.npy\")\n",
+    "dataset_nom['presel_score'] = presel_score_nom\n",
+    "\n",
+    "list_syst = [key for key in dict_systs]\n",
+    "print(list_syst)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "354e91c3",
    "metadata": {},
    "outputs": [],
@@ -128,44 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2d6082ae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0000 00:00:1749056363.871987  225118 gpu_device.cc:2022] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1213 MB memory:  -> device: 0, name: NVIDIA A100-SXM4-40GB MIG 1g.5gb, pci bus id: 0000:81:00.0, compute capability: 8.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m     1/238461\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m16:48:44\u001b[0m 254ms/step"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1749056364.887583  225569 service.cc:148] XLA service 0x7f1e40004b70 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
-      "I0000 00:00:1749056364.887623  225569 service.cc:156]   StreamExecutor device (0): NVIDIA A100-SXM4-40GB MIG 1g.5gb, Compute Capability 8.0\n",
-      "2025-06-04 16:59:24.893128: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
-      "I0000 00:00:1749056364.909449  225569 cuda_dnn.cc:529] Loaded cuDNN version 90501\n",
-      "I0000 00:00:1749056365.000972  225569 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m135174/238461\u001b[0m \u001b[32m━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━\u001b[0m \u001b[1m58s\u001b[0m 569us/step"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(sys.modules['nsbi_common_utils.training'])\n",
     "from nsbi_common_utils.training import TrainEvaluatePreselNN\n",
@@ -199,25 +196,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "1051f14a-0104-418b-9e43-6edcdcd07df2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "preselection_cuts = np.load(f\"{saved_data}preselection_cuts.npy\", allow_pickle=True).item()\n",
+    "\n",
+    "dataset_nom_SR, dataset_nom_CR = preselection_using_score(dataset_nom, preselection_cuts)\n",
+    "\n",
+    "datasets_syst_SR = {}\n",
+    "datasets_syst_CR = {}\n",
+    "\n",
+    "for syst in datasets_syst:\n",
+    "\n",
+    "    datasets_syst_SR[syst] = {}\n",
+    "    datasets_syst_CR[syst] = {}\n",
+    "    \n",
+    "    for direction in datasets_syst[syst]:\n",
+    "\n",
+    "        datasets_syst_SR[syst][direction], datasets_syst_CR[syst][direction] = preselection_using_score(datasets_syst[syst][direction], preselection_cuts)\n",
     "\n",
     "\n",
-    "dataset_incl = pd.read_hdf(f\"{saved_data}dataset_inclusive.h5\", key=\"dataset\", mode='r')\n",
-    "presel_score_incl = np.load(f\"{saved_data}presel_score_incl.npy\")\n",
-    "\n",
-    "dataset_incl['presel_score'] = presel_score_incl\n",
-    "\n",
-    "preselection_cut_lower = np.load(f\"{saved_data}preselection_cut_lower.npy\")\n",
-    "\n",
-    "dataset_SR = dataset_incl[(dataset_incl.presel_score>=preselection_cut_lower)].copy()\n",
-    "dataset_SR = dataset_SR[(dataset_SR.lepton_pt<=200.0)].copy()\n",
-    "dataset_SR = dataset_SR[(dataset_SR.H_T<=1000.0)].copy()\n",
-    "\n",
-    "dataset_CR = dataset_incl[(dataset_incl.presel_score<preselection_cut_lower)].copy()\n"
+    "del dataset_nom, datasets_syst"
    ]
   },
   {
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "43e88709-cf0c-435d-85aa-f7ac61a34528",
    "metadata": {},
    "outputs": [],
@@ -243,6 +244,7 @@
     "    hist_CR = pickle.load(fp)\n",
     "\n",
     "bins_CR = np.load(f\"{saved_data}CRbins.npy\")\n",
+    "observable_CR = np.load(f\"{saved_data}observable_CR.npy\")\n",
     "\n",
     "min_presel_bin = bins_CR[0]\n",
     "max_presel_bin = bins_CR[-1]"
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "d26b8c5d-ada8-4913-98f9-0f498b4d72cb",
    "metadata": {},
    "outputs": [
@@ -258,9 +260,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ttbar': {'ttbar_scale': {'up': array([1.02683693, 0.99911486, 0.97356021, 0.94799736, 0.97237292,\n",
-      "       0.99406532, 0.99904336, 1.01018534, 1.01159173]), 'down': array([0.99502665, 0.99837745, 1.09742263, 1.06865511, 1.03750643,\n",
-      "       1.00425092, 0.98348145, 0.98083827, 1.00677438])}}, 'single_top_t_chan': {'ttbar_scale': {'up': array([1., 1., 1., 1., 1., 1., 1., 1., 1.]), 'down': array([1., 1., 1., 1., 1., 1., 1., 1., 1.])}}, 'single_top_tW': {'ttbar_scale': {'up': array([1., 1., 1., 1., 1., 1., 1., 1., 1.]), 'down': array([1., 1., 1., 1., 1., 1., 1., 1., 1.])}}, 'wjets': {'ttbar_scale': {'up': array([1., 1., 1., 1., 1., 1., 1., 1., 1.]), 'down': array([1., 1., 1., 1., 1., 1., 1., 1., 1.])}}}\n"
+      "{'htautau': {'TES': {'up': array([0.8788392 , 0.90506965, 0.9349892 , 0.98828834, 1.1152143 ,\n",
+      "       1.2081715 , 1.2973925 , 1.3719617 , 1.5280669 ], dtype=float32), 'dn': array([1.8330916 , 1.1278288 , 1.088801  , 1.0275768 , 0.9291579 ,\n",
+      "       0.7956867 , 0.74487346, 0.7501907 , 0.6585444 ], dtype=float32)}}, 'ztautau': {'TES': {'up': array([0.89654315, 0.9628398 , 1.0833077 , 1.3195815 , 1.4107485 ,\n",
+      "       1.249072  , 1.2954575 , 1.3045707 , 1.4716338 ], dtype=float32), 'dn': array([1.6839458 , 0.9173606 , 0.68955356, 0.5159852 , 0.5404313 ,\n",
+      "       0.714295  , 0.7965544 , 0.7652699 , 0.66638356], dtype=float32)}}, 'ttbar': {'TES': {'up': array([0.98617285, 1.0040338 , 1.0267172 , 1.0572314 , 1.0779127 ,\n",
+      "       1.0802714 , 1.1307081 , 1.1119249 , 1.2655023 ], dtype=float32), 'dn': array([1.7158306 , 0.97119766, 0.95033747, 0.92325395, 0.91512525,\n",
+      "       0.8815596 , 0.89302397, 0.852029  , 0.74789196], dtype=float32)}}}\n"
      ]
     }
    ],
@@ -270,34 +276,38 @@
     "for process in labels_dict:\n",
     "    \n",
     "    hist_var[process] = {}\n",
-    "    mask_process = (dataset_CR.type==process)\n",
     "    \n",
     "    for syst in dict_systs:\n",
     "\n",
     "        hist_var[process][syst] = {}\n",
     "\n",
-    "        for direction in ['up', 'down']:\n",
+    "        for direction in ['up', 'dn']:\n",
     "\n",
     "            hist_var[process][syst][direction] = {}\n",
+    "            \n",
+    "            mask_process = (datasets_syst_CR[syst][direction].type==process)\n",
     "        \n",
     "            if (process not in dict_systs[syst]['process']) | (direction not in dict_systs[syst]['directions']):\n",
     "                hist_var[process][syst][direction] = np.ones_like(hist_CR[process])\n",
     "\n",
     "            else:\n",
-    "                mask_syst = (dataset_CR.syst_labels==syst+'_'+direction)\n",
-    "                mask_syst_process = mask_process & mask_syst\n",
+    "\n",
+    "                dataset_process = datasets_syst_CR[syst][direction][mask_process].copy()\n",
     "                \n",
-    "                hist_var[process][syst][direction] = np.histogram(np.clip(dataset_CR[mask_syst_process]['presel_score'].ravel(), \n",
+    "                hist_var[process][syst][direction] = np.histogram(np.clip(dataset_process[observable_CR].ravel(), \n",
     "                                                                    min_presel_bin, max_presel_bin), \n",
-    "                                                                    weights = dataset_CR[mask_syst_process]['weights'].ravel(),\n",
+    "                                                                    weights = dataset_process['weights'].ravel(),\n",
     "                                                                    bins = bins_CR)[0]/hist_CR[process]\n",
+    "\n",
+    "                del dataset_process\n",
+    "\n",
     "\n",
     "print(hist_var)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "b27caa55-6231-4abe-bf31-0330d4e918ea",
    "metadata": {},
    "outputs": [],
