removing hep challenge directory

--- a/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
@@ -100,7 +100,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_training['type'] = df_training['detailed_labels'].copy()"
+    "df_training['type'] = df_training['detailed_labels'].copy()\n",
+    "\n",
+    "df_training['has_jets'] = np.where(\n",
+    "    df_training['PRI_n_jets'] > 0, 1, 0\n",
+    ")"
    ]
   },
   {
@@ -220,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_features = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_jet_leading_eta', 'PRI_n_jets']\n",
+    "input_features = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_jet_leading_eta', 'PRI_n_jets', 'has_jets']\n",
     "columns_to_keep = input_features + ['weights', 'detailed_labels', 'type', 'train_labels']\n",
     "\n",
     "for sample in dataset_dict:\n",
