--- a/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -92,6 +92,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ec064a6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_prefix = '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/'\n",
+    "\n",
+    "# Path for saving interemdiate objects, like NN predictions\n",
+    "saved_data = f'{path_prefix}cached_data/'\n",
+    "\n",
+    "# Path for saving/loading preselection NN model\n",
+    "path_to_saved_presel_model = f'{path_prefix}preselection_saved_NN/'\n",
+    "\n",
+    "# Load the nominal dataset saved from the pre-processing notebook\n",
+    "dataset_incl_nominal = pd.read_hdf(f\"{saved_data}df_nominal.h5\", key=\"dataset\", mode='r')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "d61d461f-5f65-4e57-875e-1e85f44fe9b5",
    "metadata": {},
@@ -102,13 +121,44 @@
     "# If the preselection NN has already been trained and evaluated, load the numpy array of predictions\n",
     "USE_SAVED_PRESEL_PREDICTIONS=True\n",
     "\n",
-    "path_prefix = '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/'\n",
+    "# Get the dictionary of labels to processes\n",
+    "labels_dict = np.load(f\"{saved_data}labels_dictionary.npy\", allow_pickle=True).item()\n",
     "\n",
-    "# Path for saving interemdiate objects, like NN predictions\n",
-    "saved_data = f'{path_prefix}cached_data/'\n",
+    "# Features to use for training NNs\n",
+    "columns = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi']\n",
+    "columns_scaling = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi']\n",
     "\n",
-    "# Path for saving/loading preselection NN model\n",
-    "path_to_saved_presel_model = f'{path_prefix}preselection_saved_NN/'\n"
+    "# columns = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_n_jets', 'has_jets']\n",
+    "# columns_scaling = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt']\n",
+    "\n",
+    "# columns = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_jet_leading_pt', 'PRI_jet_leading_eta', 'has_jets']\n",
+    "# columns_scaling = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_jet_leading_pt', 'PRI_jet_leading_eta']\n",
+    "\n",
+    "\n",
+    "np.save(f\"{saved_data}columns.npy\", columns)\n",
+    "np.save(f\"{saved_data}columns_scaling.npy\", columns_scaling)\n",
+    "\n",
+    "\n",
+    "signal_processes = [\"htautau\"]\n",
+    "background_processes = [\"ttbar\", \"ztautau\"]\n",
+    "# background_processes = [\"ttbar\", \"ztautau\", \"diboson\"]\n",
+    "\n",
+    "# mix_model_hypotheses = signal_processes + background_processes\n",
+    "mix_model_hypotheses = background_processes\n",
+    "ref_processes = signal_processes\n",
+    "\n",
+    "np.save(f\"{saved_data}mix_model_hypotheses.npy\", mix_model_hypotheses)\n",
+    "np.save(f\"{saved_data}ref_processes.npy\", ref_processes)\n",
+    "\n",
+    "pre_factor_preselection_score = {}\n",
+    "\n",
+    "pre_factor_preselection_score['htautau'] = 1.0\n",
+    "pre_factor_preselection_score['ttbar'] = 1.0\n",
+    "pre_factor_preselection_score['ztautau'] = 1.0\n",
+    "\n",
+    "np.save(f\"{saved_data}signal_processes.npy\", signal_processes)\n",
+    "np.save(f\"{saved_data}background_processes.npy\", background_processes)\n",
+    "np.save(f\"{saved_data}pre_factor_preselection.npy\", pre_factor_preselection_score)\n"
    ]
   },
   {
@@ -118,23 +168,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the nominal dataset saved from the pre-processing notebook\n",
-    "dataset_incl_nominal = pd.read_hdf(f\"{saved_data}df_nominal.h5\", key=\"dataset\", mode='r')\n",
     "\n",
     "# Load the MC/data weights and training labels identifying different processes\n",
     "weights = dataset_incl_nominal.weights.to_numpy()\n",
     "train_labels = dataset_incl_nominal.train_labels.to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "60a09162-926c-49a8-956d-0e952a2c8485",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the dictionary of labels to processes\n",
-    "labels_dict = np.load(f\"{saved_data}labels_dictionary.npy\", allow_pickle=True).item()"
    ]
   },
   {
@@ -190,87 +227,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "17de6e5b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi',\n",
-       "       'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt',\n",
-       "       'PRI_jet_leading_eta', 'PRI_n_jets', 'weights', 'detailed_labels',\n",
-       "       'type', 'train_labels', 'weights_normed'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset_incl_nominal.columns.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "21ace769-6268-40fa-837b-ce2e5bfebb38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_incl_nominal['has_jets'] = np.where(\n",
-    "    dataset_incl_nominal['PRI_n_jets'] > 0, 1, 0\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "842f99a9-f9ea-405a-9133-23a64b95a589",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Features to use for training NNs\n",
-    "columns = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi']\n",
-    "columns_scaling = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi']\n",
-    "\n",
-    "# columns = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_n_jets', 'has_jets']\n",
-    "# columns_scaling = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt']\n",
-    "\n",
-    "# columns = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_jet_leading_pt', 'PRI_jet_leading_eta', 'has_jets']\n",
-    "# columns_scaling = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_jet_leading_pt', 'PRI_jet_leading_eta']\n",
-    "\n",
-    "\n",
-    "np.save(f\"{saved_data}columns.npy\", columns)\n",
-    "np.save(f\"{saved_data}columns_scaling.npy\", columns_scaling)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "8285b468",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "signal_processes = [\"htautau\"]\n",
-    "background_processes = [\"ttbar\", \"ztautau\"]\n",
-    "# background_processes = [\"ttbar\", \"ztautau\", \"diboson\"]\n",
-    "\n",
-    "pre_factor = {}\n",
-    "\n",
-    "pre_factor['htautau'] = 1.0\n",
-    "pre_factor['ttbar'] = 1.0\n",
-    "pre_factor['ztautau'] = 1.0\n",
-    "\n",
-    "np.save(f\"{saved_data}signal_processes.npy\", signal_processes)\n",
-    "np.save(f\"{saved_data}background_processes.npy\", background_processes)\n",
-    "np.save(f\"{saved_data}pre_factor_preselection.npy\", pre_factor)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "ace064c7-94fd-458b-aab5-55d512cea983",
    "metadata": {},
@@ -311,27 +267,12 @@
     "    # Get predictions (softmax outputs)\n",
     "    pred_NN_incl = preselectionTraining.predict(dataset_incl_nominal)\n",
     "\n",
-    "    presel_score = calculate_preselection_observable(pred_NN_incl, labels_dict, signal_processes, background_processes, pre_factor_dict = pre_factor)\n",
+    "    presel_score = calculate_preselection_observable(pred_NN_incl, labels_dict, signal_processes, background_processes, pre_factor_dict = pre_factor_preselection_score)\n",
     "\n",
     "    np.save(f\"{saved_data}presel_score.npy\", presel_score)\n",
     "    np.save(f\"{saved_data}pred_NN_incl.npy\", presel_score)\n",
     "\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "7744d920",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mix_model_hypotheses = signal_processes + background_processes\n",
-    "mix_model_hypotheses = background_processes\n",
-    "ref_processes = signal_processes\n",
-    "\n",
-    "np.save(f\"{saved_data}mix_model_hypotheses.npy\", mix_model_hypotheses)\n",
-    "np.save(f\"{saved_data}ref_processes.npy\", ref_processes)"
    ]
   },
   {
@@ -579,16 +520,6 @@
     "$$\\sum_c \\left[f_c(\\mu) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)} \\right]= \\mu + \\frac{p_{t\\bar{t}}\\left(x\\right)}{p_{H \\to \\tau\\tau}(x)} + \\frac{p_{Z \\to \\tau\\tau}\\left(x\\right)}{p_{H \\to \\tau\\tau}(x)}$$\n",
     "\n",
     "The task of estimating the $\\mu-$parameterized density ratio is thus reduced to estimating two $\\mu-$independent density ratios $\\frac{p_\\text{single top}}{p_{t\\bar{t}}}(x)$ and $\\frac{p_\\text{wjets}}{p_{t\\bar{t}}}(x)$ mixed together with an analytical parameterization (hence the name mixture model)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "f201b6a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " dataset['type'] =  dataset['detailed_labels'].to_numpy()"
    ]
   },
   {
