--- a/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
@@ -2575,7 +2575,7 @@
     "    \n",
     "    for syst in dict_systs:\n",
     "\n",
-    "        print(f\"\\n\\n Training for {syst}\\n\\n\")\n",
+    "        print(f\"\\n\\n Training for {syst} systematic for process {process} \\n\\n\")\n",
     "\n",
     "        if process not in dict_systs[syst]['process']:\n",
     "            print(f\"Nothing to train for {process} in {syst} uncertainty\")\n",
